add new versions

--- a/apiVersions.properties
+++ b/apiVersions.properties
@@ -1,10 +1,10 @@
 # Compiled form Curseforge data and announcements in Fabric discord
-20w51a = 0.28.3+1.17, 0.28.2+1.17, 0.28.4+1.17, 0.29.0+1.17, 0.29.1+1.17, 0.29.2+1.17, 0.29.3+1.17
+20w51a = 0.28.3+1.17, 0.28.2+1.17, 0.28.4+1.17, 0.29.0+1.17, 0.29.1+1.17, 0.29.2+1.17, 0.29.3+1.17, 0.29.4+1.17
 20w49a = 0.27.2+1.17, 0.27.3+1.17, 0.28.1+1.17, 0.28.0+1.17
 20w48a = 0.26.4+1.17, 0.27.1+1.17, 0.27.0+1.17
 20w46a = 0.25.6+1.17, 0.26.3+1.17, 0.26.2+1.17, 0.26.0+1.17, 0.25.7+1.17, 0.26.1+1.17
 20w45a = 0.25.3+1.17, 0.25.2+1.17, 0.25.5+1.17, 0.25.4+1.17
-1.16.5 = 0.26.0+1.16, 0.26.1+1.16, 0.25.7+1.16, 0.28.1+1.16, 0.25.1+build.416-1.16, 0.26.2+1.16, 0.27.0+1.16, 0.28.3+1.16, 0.28.4+1.16, 0.25.4+1.16, 0.26.3+1.16, 0.27.1+1.16, 0.28.0+1.16, 0.29.0+1.16, 0.29.1+1.16, 0.29.2+1.16, 0.29.3+1.16
+1.16.5 = 0.26.0+1.16, 0.26.1+1.16, 0.25.7+1.16, 0.28.1+1.16, 0.25.1+build.416-1.16, 0.26.2+1.16, 0.27.0+1.16, 0.28.3+1.16, 0.28.4+1.16, 0.25.4+1.16, 0.26.3+1.16, 0.27.1+1.16, 0.28.0+1.16, 0.29.0+1.16, 0.29.1+1.16, 0.29.2+1.16, 0.29.3+1.16, , 0.29.4+1.16
 1.16.4 = 0.26.0+1.16, 0.26.1+1.16, 0.25.7+1.16, 0.28.1+1.16, 0.25.1+build.416-1.16, 0.26.2+1.16, 0.27.0+1.16, 0.28.3+1.16, 0.28.4+1.16, 0.25.4+1.16, 0.26.3+1.16, 0.27.1+1.16, 0.28.0+1.16, 0.29.0+1.16, 0.29.1+1.16, 0.29.2+1.16, 0.29.3+1.16
 # Tested to world load
 1.16.4-rc1 = 0.29.0+1.16
@@ -58,7 +58,7 @@
 20w08a = 0.4.33+build.299-1.16
 20w07a = 0.4.33+build.298-1.16, 0.4.33+build.299-1.16
 20w06a = 0.4.31+build.295-1.16, 0.4.32+build.296-1.16, 0.4.30+build.294-1.16
-1.15.2 = 0.23.0+build.328-1.15, 0.16.0+build.321-1.15, 0.23.1+1.15, 0.15.1+build.319-1.15, 0.11.1+build.312-1.15, 0.5.12+build.296-1.15, 0.6.0+build.298-1.15, 0.10.8+build.310-1.15, 0.21.1+build.327-1.15, 0.10.1+build.306-1.15, 0.4.29+build.290-1.15, 0.16.2+build.322-1.15, 0.18.0+build.324-1.15, 0.8.0+build.302-1.15, 0.5.13+build.297-1.15, 0.4.30+build.291-1.15, 0.19.0+build.325-1.15, 0.15.0+build.318-1.15, 0.12.0+build.313-1.15, 0.11.0+build.311-1.15, 0.5.0+build.293-1.15, 0.5.1+build.294-1.15, 0.10.1+build.307-1.15, 0.9.0+build.303-1.15, 0.13.1+build.316-1.15, 0.14.0+build.317-1.15, 0.10.0+build.305-1.15, 0.10.7+build.309-1.15, 0.7.1+build.301-1.15, 0.4.32+build.292-1.15, 0.21.0+build.326-1.15, 0.17.0+build.323-1.15, 0.28.4+1.15
+1.15.2 = 0.23.0+build.328-1.15, 0.16.0+build.321-1.15, 0.23.1+1.15, 0.15.1+build.319-1.15, 0.11.1+build.312-1.15, 0.5.12+build.296-1.15, 0.6.0+build.298-1.15, 0.10.8+build.310-1.15, 0.21.1+build.327-1.15, 0.10.1+build.306-1.15, 0.4.29+build.290-1.15, 0.16.2+build.322-1.15, 0.18.0+build.324-1.15, 0.8.0+build.302-1.15, 0.5.13+build.297-1.15, 0.4.30+build.291-1.15, 0.19.0+build.325-1.15, 0.15.0+build.318-1.15, 0.12.0+build.313-1.15, 0.11.0+build.311-1.15, 0.5.0+build.293-1.15, 0.5.1+build.294-1.15, 0.10.1+build.307-1.15, 0.9.0+build.303-1.15, 0.13.1+build.316-1.15, 0.14.0+build.317-1.15, 0.10.0+build.305-1.15, 0.10.7+build.309-1.15, 0.7.1+build.301-1.15, 0.4.32+build.292-1.15, 0.21.0+build.326-1.15, 0.17.0+build.323-1.15, 0.28.4+1.15, 0.28.5+1.15
 1.15.2-pre2 = 0.4.28+build.288-1.15
 1.15.2-pre1 = 0.4.28+build.288-1.15
 1.15.1 = 0.4.27+build.286-1.15, 0.4.25+build.282-1.15, 0.4.26+build.283-1.15
@@ -87,7 +87,7 @@
 19w36a = 0.3.2+build.223-1.15, 0.3.2+build.221-1.15, 0.3.2+build.219-1.15
 19w35a = 0.3.2+build.213-1.15, 0.3.2+build.214-1.15, 0.3.2+build.217-1.15, 0.3.2+build.215-1.15
 19w34a = 0.3.2+build.212-1.15
-1.14.4 = 0.15.1+build.260-1.14, 0.23.2+1.14, 0.3.1+build.208, 0.3.0+build.206, 0.8.2+build.252-1.14, 0.14.0+build.258-1.14, 0.3.2+build.218-1.14, 0.12.0+build.254-1.14, 0.15.0+build.259-1.14, 0.4.2+build.246-1.14, 0.3.0+build.207, 0.4.1+build.245-1.14, 0.3.0+build.200, 0.3.2+build.220-1.14, 0.3.2+build.224-1.14, 0.16.2+build.261-1.14, 0.4.3+build.247-1.14, 0.8.1+build.251-1.14, 0.8.0+build.250-1.14, 0.13.1+build.257-1.14, 0.5.12+build.249-1.14, 0.4.0+build.240-1.14, 0.3.2+build.233-1.14, 0.3.3+build.234-1.14, 0.3.2+build.226-1.14, 0.3.2+build.216-1.14, 0.19.0+build.262-1.14, 0.23.0+build.264-1.14, 0.28.4+1.14
+1.14.4 = 0.15.1+build.260-1.14, 0.23.2+1.14, 0.3.1+build.208, 0.3.0+build.206, 0.8.2+build.252-1.14, 0.14.0+build.258-1.14, 0.3.2+build.218-1.14, 0.12.0+build.254-1.14, 0.15.0+build.259-1.14, 0.4.2+build.246-1.14, 0.3.0+build.207, 0.4.1+build.245-1.14, 0.3.0+build.200, 0.3.2+build.220-1.14, 0.3.2+build.224-1.14, 0.16.2+build.261-1.14, 0.4.3+build.247-1.14, 0.8.1+build.251-1.14, 0.8.0+build.250-1.14, 0.13.1+build.257-1.14, 0.5.12+build.249-1.14, 0.4.0+build.240-1.14, 0.3.2+build.233-1.14, 0.3.3+build.234-1.14, 0.3.2+build.226-1.14, 0.3.2+build.216-1.14, 0.19.0+build.262-1.14, 0.23.0+build.264-1.14, 0.28.4+1.14, 0.28.5+1.14
 1.14.4-pre7 = 
 1.14.4-pre6 = 
 1.14.4-pre5 = 0.3.0+build.194, 0.3.0+build.196
